--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gas-PageSpeedInsights-v5",
+  "name": "gas-feedbackBackend",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
