--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
   "devDependencies": {
     "@types/google-apps-script": "0.0.36",
     "@types/jest": "^23.3.13",
+    "copy-webpack-plugin": "^5.0.4",
     "cpx": "^1.5.0",
     "gas-webpack-plugin": "^1.0.2",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "prettier": "^1.16.1",
     "rimraf": "^2.6.3",
