--- a/package.json
+++ b/package.json
@@ -28,21 +28,21 @@
   "devDependencies": {
     "@types/google-apps-script": "0.0.36",
     "@types/jest": "^23.3.14",
-    "copy-webpack-plugin": "^5.0.4",
+    "copy-webpack-plugin": "^5.1.2",
     "cpx": "^1.5.0",
-    "gas-webpack-plugin": "^1.0.2",
+    "gas-webpack-plugin": "^1.2.1",
     "html-loader": "^0.5.5",
     "jest": "^23.6.0",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "rimraf": "^2.7.1",
     "ts-jest": "^23.10.5",
     "ts-loader": "^5.4.5",
-    "tslint": "^5.18.0",
+    "tslint": "^5.20.1",
     "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "typescript": "^3.5.3",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7"
+    "tslint-plugin-prettier": "^2.3.0",
+    "typescript": "^3.9.7",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "jest": {
     "transform": {
@@ -59,9 +59,9 @@
     ]
   },
   "dependencies": {
-    "@types/node": "^10.14.15",
-    "merge": ">=1.2.1",
-    "npm": "^6.10.3",
+    "@types/node": "^10.17.47",
+    "merge": "^2.1.0",
+    "npm": "^6.14.9",
     "randomatic": ">=3.0.0"
   }
 }
